Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
-
None
-
Unexpected results
Description
|
10.3 02e85aea |
set global query_cache_type=1; |
set query_cache_type=1; |
create table t (a int, b float as (rand())); |
insert into t (a) values (1); |
select * from t; |
a b
|
1 0.181048
|
select * from t; |
a b
|
1 0.181048
|
set query_cache_type=0; |
select * from t; |
a b
|
1 0.437779
|