MDEV-29186 Query cache makes virtual column function RAND() non-random